# runme

./: .gitignore  .goreleaser.yml  .nprmrc  .pre-commit-config.yaml  .release-notes-v3.16.10.md  Brewfile  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  Makefile  README.md  aisretmp  buf.gen.yaml  buf.work.yaml  go.mod  go.sum  main.go  main_test.go  sonar-project.properties
.claude/: settings.json
.dagger/: BUILD.md  go.sum  main.go
.github/: dependabot.yml
.github/workflows/: CI.md  build-env-image.yml  ci.yml  container.yml  python-publish.yml  release.yml  runme-image.yml
api/proto/: buf.yaml
api/proto-tools/: buf.gen.yaml  buf.yaml  build.sh
cmd/: common.go  environment.go  environment_store.go  eval.go  eval_compare.go  eval_compare_test.go  eval_harbor_docker.go  eval_promote.go  eval_promote_test.go  eval_task.go  eval_task_test.go  eval_test.go  eval_view.go  eval_view_test.go  exit.go  exit_test.go  harbor.go  harbor_test.go  root.go  run.go  run_terminal_title.go  run_test.go  server.go  terminal_title_test.go  version.go  version_test.go
cmd/beta/: beta_cmd.go  run_cmd.go
command/: command.go  command_docker_test.go  command_file_test.go  command_inline.go  command_inline_shell_test.go  command_internal_test.go  command_lifecycle_unix_test.go  command_native.go  command_terminal_test.go  command_test.go  command_unix_test.go  command_virtual.go  command_windows.go  env_collector.go  env_collector_fifo_unix_test.go  env_collector_file_test.go  env_shell_test.go  factory.go
command/testdata/: testdata.go
docker/: runme-build-env.Dockerfile  runme-build.Dockerfile
docs/: dependabot-vscode-runme-consolidation.md
document/: frontmatter.go  parser.go
document/editor/: cell.go  cell_test.go  editor.go  editor_test.go
examples/goexec/: main.go
examples/harbor/: README.md
experimental/: runme.yaml
harbor/: server.go  server_test.go
integrations/harbor/: NOTICE  README.md  buf.gen.yaml  pyproject.toml
integrations/harbor/src/runme_harbor/: __init__.py  cli.py  codex_agent.py  environment.py  local_agents.py  local_claude_code.py  local_codex.py  metadata_sync.py  runme_agents.py
integrations/harbor/src/runme_harbor/_proto/runme/harbor/v1/: harbor_pb2.py  harbor_pb2.pyi
integrations/harbor/tests/: test_cli.py  test_codex_agent.py  test_environment.py  test_local_claude_code.py  test_local_codex.py  test_local_openclaw.py  test_metadata_sync.py  test_runme_antigravity_cli.py  test_runme_claude_code.py  test_runme_codex.py  test_runme_cursor_cli.py  test_runme_openclaw.py
internal/ansi/: color.go  color_test.go
internal/cmd/: run.go  tui.go
internal/command/: command.go  command_inline_shell_test.go  env_collector_fifo_unix.go  factory.go  program_resolver.go  program_resolver_test.go
internal/config/: config_schema.go  runme.default.yaml
internal/dockerexec/: cmd.go  docker.go  docker_test.go
internal/gitignore/: gitignore.go
internal/harbor/: docker_workdir.go  docker_workdir_test.go  eval.go  eval_compare.go  eval_compare_git.go  eval_compare_job.go  eval_compare_render.go  eval_compare_test.go  eval_exec.go  eval_harbor_args.go  eval_output.go  eval_paths.go  eval_promote.go  eval_promote_git.go  eval_promote_git_test.go  eval_promote_job.go  eval_promote_job_test.go  eval_promote_message.go  eval_promote_message_test.go  eval_promote_test.go  eval_result.go  eval_result_summary.go  eval_result_test.go  eval_task_new.go  eval_task_new_templates.go  eval_task_new_test.go  eval_test.go  eval_view.go  eval_view_test.go
internal/notebook/: resolver.go
internal/owl/: README.md
internal/rbuffer/: ring_buffer.go  ring_buffer_test.go
internal/runner/: service.go  service_test.go  session.go  shell.go
internal/runnerv2service/: execution.go  service_execute_test.go
internal/server/: server.go  server_test.go
internal/terminal/: title.go
pkg/agent/: README.md
pkg/agent/ai/chatkit/: BUILD.bazel  annotations.go  const.go  datamodel.go  errors.go  responses.go  server.go  sse.go  tools.go
pkg/agent/obs/: BUILD.bazel  principal.go  principal_test.go
pkg/agent/toolsgen/mark3labs/mcp/: BUILD.bazel
project/: project.go  project_test.go
project/projectservice/: project_service.go
project/teststub/: teststub.go
runner/: command.go  command_test.go  command_windows.go  service.go  service_test.go  session.go  session_direnv.go  session_direnv_test.go  test_helpers_test.go
runner/client/: client.go  client_local.go  client_remote.go  client_test.go
runnerv2service/: buffer.go  buffer_test.go  convert.go  execution.go  service.go  service_execute.go  service_execute_test.go  service_sessions.go  tail_writer.go
session/: env_store_owl.go
snap/: snapcraft.yaml
telemetry/: cli.go  cli_test.go  cobra.go  cobra_test.go  env.go  install_channel.go  kernel.go  scarf.go  scarf_test.go
testdata/beta/: server.txtar
(+244 files in other folders)
