[project]
name = "runme-harbor"
version = "0.1.0"
description = "Runme Harbor environment adapter"
requires-python = ">=3.11"
dependencies = [
  "protobuf>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runme_harbor"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.ruff]
line-length = 100
