[project]
name = "runme-harbor"
version = "0.0.1"
description = "Runme Harbor environment adapter"
requires-python = ">=3.12"
dependencies = [
  "harbor>=0.13.1,<0.14",
  "protobuf>=6.0",
]

[project.scripts]
runme-harbor = "runme_harbor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runme_harbor"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.ruff]
line-length = 100
