load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "chatkit",
    srcs = [
        "annotations.go",
        "const.go",
        "datamodel.go",
        "errors.go",
        "responses.go",
        "server.go",
        "sse.go",
        "tools.go",
    ],
    importpath = "go.openai.org/project/aisre/pkg/ai/chatkit",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/go/helpers",
        "//lib/oaigo/telemetry/oailog",
        "//oaiproto/aisre",
        "//project/aisre/pkg/ai",
        "//project/aisre/pkg/ai/tools",
        "//project/aisre/pkg/obs",
        "@com_connectrpc_connect//:connect",
        "@com_github_google_uuid//:uuid",
        "@com_github_openai_openai_go_v2//:openai-go",
        "@com_github_openai_openai_go_v2//packages/ssestream",
        "@com_github_openai_openai_go_v2//responses",
        "@com_github_openai_openai_go_v2//shared/constant",
        "@com_github_pkg_errors//:errors",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)
