load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mcp",
    srcs = [
        "errors.go",
        "prompts.go",
        "resources.go",
        "tools.go",
        "typed_tools.go",
        "types.go",
        "utils.go",
    ],
    importpath = "go.openai.org/project/aisre/toolsgen/mark3labs/mcp",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_invopop_jsonschema//:jsonschema",
        "@com_github_spf13_cast//:cast",
        "@com_github_yosida95_uritemplate_v3//:uritemplate",
    ],
)

go_test(
    name = "mcp_test",
    srcs = [
        "tools_test.go",
        "typed_tools_test.go",
        "types_test.go",
    ],
    embed = [":mcp"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
